# biometryd

./: CMakeLists.txt  Jenkinsfile  snapcraft.yaml  symbols.map
android/hybris/: Android.mk  biometry_fp_for_hybris.cpp  biometry_fp_hidl_for_hybris.cpp
data/: CMakeLists.txt  biometryd.conf  biometryd.pc.in
debian/: biometryd-bin.install  changelog  control  control.in  copyright  gen-debian-files.sh  get-versions.sh  libbiometryd-dev.install  libbiometryd.install.in  libbiometryd.symbols.in  qml-module-biometryd.install  rules
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  architecture.md  conf.py  extending_biometryd.md  interfaces.rst  intro.md  manual_test_plan.md  manual_test_plan.md.moved
doc/source/: Doxyfile  conf.py  index.rst  intro.md
include/: CMakeLists.txt
include/biometry/: CMakeLists.txt  application.h  device.h  dictionary.h  do_not_copy_or_move.h  geometry.h  identifier.h  operation.h  optional.h  percent.h  progress.h  reason.h  service.h  template_store.h  user.h  variant.h  verifier.h  version.h.in  visibility.h  void.h
include/biometry/dbus/: service.h
include/biometry/devices/: fingerprint_reader.h
include/biometry/devices/plugin/: interface.h
include/biometry/hardware/: CMakeLists.txt  biometry.h
src/: CMakeLists.txt
src/biometry/: CMakeLists.txt  application.cpp  daemon.cpp  daemon.h  daemon_configuration.cpp.in  daemon_main.cpp  device_registrar.cpp  device_registrar.h  device_registry.cpp  device_registry.h  dispatching_service.cpp  dispatching_service.h  geometry.cpp  percent.cpp  progress.cpp  reason.cpp  runtime.cpp  runtime.h  tracing_operation_observer.h  user.cpp  variant.cpp  version.cpp
src/biometry/cmds/: config.cpp  config.h  enroll.cpp  enroll.h  help.cpp  help.h  identify.cpp  identify.h  list_devices.cpp  list_devices.h  run.cpp  run.h  test.cpp  test.h  version.cpp  version.h
src/biometry/dbus/: codec.h  interface.h  service.cpp
src/biometry/dbus/skeleton/: credentials_resolver.h  daemon_credentials_resolver.cpp  daemon_credentials_resolver.h  device.cpp  device.h  identifier.cpp  identifier.h  observer.h  operation.h  request_verifier.cpp  request_verifier.h  service.cpp  service.h  template_store.cpp  template_store.h
src/biometry/dbus/stub/: device.cpp  device.h  identifier.cpp  identifier.h  observer.h  operation.h  service.cpp  service.h  template_store.cpp  template_store.h
src/biometry/devices/: android.cpp  android.h  dispatching.cpp  dispatching.h  dummy.cpp  dummy.h  fingerprint_reader.cpp  forwarding.cpp  forwarding.h
src/biometry/devices/plugin/: device.cpp  device.h  enumerator.cpp  enumerator.h  loader.cpp  loader.h  verifier.cpp  verifier.h
src/biometry/hardware/: android_hw_module.h  biometry_fp_api.cpp
src/biometry/qml/: CMakeLists.txt
src/biometry/qml/Biometryd/: CMakeLists.txt  converter.cpp  converter.h  device.cpp  device.h  fingerprint_reader.cpp  fingerprint_reader.h  identifier.cpp  identifier.h  operation.cpp  operation.h  plugin.cpp  plugin.h  qmldir  service.cpp  service.h  template_store.cpp  template_store.h  user.cpp  user.h
src/biometry/util/: atomic_counter.cpp  atomic_counter.h  benchmark.cpp  benchmark.h  cli.cpp  cli.h  configuration.cpp  configuration.h  dispatcher.cpp  dispatcher.h  dynamic_library.cpp  dynamic_library.h  json_configuration_builder.cpp  json_configuration_builder.h  not_implemented.cpp  not_implemented.h  not_reachable.cpp  not_reachable.h  once.h  property_store.cpp  property_store.h  statistics.cpp  statistics.h  streaming_configuration_builder.h  synchronized.h
src/util/: CMakeLists.txt  atomic_counter.cpp  atomic_counter.h  configuration.cpp  configuration.h  dynamic_library.cpp  dynamic_library.h  once.h  synchronized.h  variant.cpp  variant.h
tests/: CMakeLists.txt  biometryd_devices_plugin_dl.cpp  biometryd_devices_plugin_dl_version_mismatch.cpp  config.cpp.in  config.h  did_finish_successfully.h  echo_service.h  mock_device.h  test_atomic_counter.cpp  test_configuration.cpp  test_daemon.cpp  test_dbus_codec.cpp  test_dbus_stub_skeleton.cpp  test_device_registrar.cpp  test_dictionary.cpp  test_dispatching_service_and_device.cpp  test_fingerprint_reader.cpp  test_forwarding.cpp  test_geometry.cpp  test_operation.cpp  test_percent.cpp  test_plugin_device.cpp  test_progress.cpp  test_qml_plugin.cpp  test_user.cpp  test_verifier.cpp  tst_qml_plugin.qml
tests/cmds/: test_config.cpp  test_run.cpp  test_test.cpp
